fixed y overflow on sidebar

--- a/src/components/Sidedrawer/index.module.scss
+++ b/src/components/Sidedrawer/index.module.scss
@@ -33,6 +33,13 @@
   transform: translateX(-100%);
   box-shadow: -1px 0px 50px 0.2px #aaaaaa;
 }
+
+@media (max-width: 500px) {
+  .Open {
+    overflow-y: scroll;
+  }
+}
+
 .Close {
   transform: translateX(0);
 }
